@@ -12,7 +12,6 @@
 (straight-use-package '(xelb :host github :repo "emacs-exwm/xelb"))
 (straight-use-package '(exwm :host github :repo "emacs-exwm/exwm"))
 (straight-use-package '(exwm-firefox :host codeberg :repo "emacs-weirdware/exwm-firefox"))
-(straight-use-package '(exwm-ns :host github :repo "timor/exwm-ns"))
 (straight-use-package '(gptel-quick :host github :repo "karthink/gptel-quick"))
 (straight-use-package '(image-slicing :host github :repo "ginqi7/image-slicing"))
 (straight-use-package '(nerd-icons-multimodal :host github :repo "abougouffa/nerd-icons-multimodal"))
@@ -44,6 +43,7 @@
 (straight-use-package 'diff-hl)
 (straight-use-package 'doom-modeline)
 (straight-use-package 'dpkg-dev-el)
+(straight-use-package 'ednc)
 (straight-use-package 'eglot)
 (straight-use-package 'eglot-tempel)
 (straight-use-package 'eldoc)
